--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,21 @@
 body{
+    color: #333;
     text-align: center;
     font-family: "Arial";
-    color: deeppink;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#tugfa{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: solid #333;
+    border-width: 2px;
+    margin: 0 auto;
+}
+
+#tugfa h1{
+    font-size: 20px;
 }
