Finalizada la cabecera con diseño azul

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,21 @@ body{
     padding: 0;
 }
 
-#tugfa{
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rbga(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container{
     width: 70%;
     padding: 1em;
     text-align: left;
@@ -16,6 +30,6 @@ body{
     margin: 0 auto;
 }
 
-#tugfa h1{
+#container h1{
     font-size: 20px;
 }
