--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: #333;
     text-align: center;
-    font-family: "Courier";
+    font-family: "Ariel";
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -11,6 +11,7 @@ body{
     background: #33A;
     box-shadow: 0px 2px 20px 0px rbga(0,0,0,0.5);
     color: white;
+    font-family: "Arial";
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
